--- a/3.3 Image Elements/index.html
+++ b/3.3 Image Elements/index.html
@@ -1,6 +1,10 @@
 <!-- Kitten image URL -->
 https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg
-
+<h1> Im a Cat Person</h1>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg" alt="Kitten image">
 
 <!-- Puppy image URL -->
 https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif
+
+<h1> Im a Dog Person</h1>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif" alt="Puppy image">
